# j4fos

./: .gdbinit.tmpl-riscv  .gitignore  Cargo.toml  Makefile  README.md  TODO  entry.s  kernel.ld  main.c  rust-toolchain.toml  start.c
.cargo/: config.toml
crates/dev/: Cargo.toml
crates/dev/src/: console.rs  lib.rs  uart16550.rs
crates/fs/: Cargo.toml
crates/kernel/: Cargo.toml
crates/kernel/src/: lib.rs
crates/kernel/src/asm/: entry.s
crates/kernel/src/linker/: kernel.ld
crates/mm/: Cargo.toml  README.md
crates/mm/benches/: one_thread.rs  one_thread_std.rs  shared.rs
crates/mm/src/: layout.rs  lib.rs  locked_zone.rs  nostdlib.rs  page.rs  stdlib.rs  zone.rs
crates/mm/tests/: default.rs
crates/net/: Cargo.toml
crates/net/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs  linked_list.rs
crates/types/tests/: default.rs  linked_list.rs
docs/: allocator.md  bus.md  ee.md  goal.md  index.md  v12n_software.md
src/: entry.s  lib.rs
