[workspace]
resolver = "2"

members = [
    "crates/*"
]

[workspace.package]
name = "arrakis"
version = "0.0.1"
authors = ["squeakbug <squeakbug73@outlook.com>"]
edition = "2021"

[workspace.dependencies]
dev = { path = "crates/dev" }
fs = { path = "crates/fs" }
kernel = { path = "crates/kernel" }
mm = { path = "crates/mm" }
net = { path = "crates/net" }
types = { path = "crates/types" }

[profile.release]
lto = true
