[package]
name = "kernel"
version = "0.0.1"
authors = ["squeakbug <squeakbug73@outlook.com>"]
edition = "2021"

[lib]
name = "kernel"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
dev.workspace = true
fs.workspace = true
mm.workspace = true
net.workspace = true
types.workspace = true

[features]
with_std = [ "mm/with_std" ]
